# Cage-Based-Deformation-MVC

./: HumanBody_3670.ply  README.md
src/: CMakeLists.txt  CageGenerator.cpp  CageGenerator.hpp  DeformCageViewerPlugin.hpp  MeanValueCoordController.cpp  MeanValueCoordController.hpp  MeshProcessor.cpp  MeshProcessor.hpp  main.cpp
